--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,6 @@ Source/CSharp-CommandLineArgumentsParser/.vs/CSharp-CommandLineArgumentsParser/v
 Source/CSharp-CommandLineArgumentsParser/.vs/CSharp-CommandLineArgumentsParser/v17/TestStore/0/testlog.manifest
 Source/CSharp-CommandLineArgumentsParser/.vs/ProjectEvaluation/csharp-commandlineargumentsparser.metadata.v5.2
 Source/CSharp-CommandLineArgumentsParser/.vs/ProjectEvaluation/csharp-commandlineargumentsparser.projects.v5.2
+Source/CSharp-CommandLineArgumentsParser/.vs/CSharp-CommandLineArgumentsParser/FileContentIndex/9deab749-28e8-4492-a20d-0bafc91fc122.vsidx
+Source/CSharp-CommandLineArgumentsParser/.vs/CSharp-CommandLineArgumentsParser/FileContentIndex/93089229-b389-4811-a7db-d15840635250.vsidx
+Source/CSharp-CommandLineArgumentsParser/.vs/CSharp-CommandLineArgumentsParser/FileContentIndex/d5abfeb7-e040-43f5-bb74-9b91f9466e55.vsidx
