--- a/Source/CSharp-CommandLineArgumentsParser/CSharp-CommandLineArgumentsParser/CSharp-CommandLineArgumentsParser.csproj
+++ b/Source/CSharp-CommandLineArgumentsParser/CSharp-CommandLineArgumentsParser/CSharp-CommandLineArgumentsParser.csproj
@@ -3,9 +3,16 @@
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
 	<RepositoryUrl>https://github.com/CleverCodeCravers/CSharp-CommandLineArgumentsParser</RepositoryUrl>
-    <RootNamespace>CSharp_CommandLineArgumentsParser</RootNamespace>
+    <RootNamespace>CommandLineArgumentsParser</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <GeneratePackageOnBuild>False</GeneratePackageOnBuild>
+    <Title>CSharpCommandLineArgumentsParser</Title>
+    <Authors>CleverCodeCravers</Authors>
+    <Description>Feature rich library to parse command line arguments in C# Applications</Description>
+    <Copyright>MIT</Copyright>
+    <PackageProjectUrl>https://github.com/CleverCodeCravers/CSharp-CommandLineArgumentsParser</PackageProjectUrl>
+    <Version>1.0.1</Version>
   </PropertyGroup>
 
 </Project>
