added files to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,6 @@ Source/CSharp-CommandLineArgumentsParser/.vs/ProjectEvaluation/csharp-commandlin
 Source/CSharp-CommandLineArgumentsParser/.vs/CSharp-CommandLineArgumentsParser/FileContentIndex/9deab749-28e8-4492-a20d-0bafc91fc122.vsidx
 Source/CSharp-CommandLineArgumentsParser/.vs/CSharp-CommandLineArgumentsParser/FileContentIndex/93089229-b389-4811-a7db-d15840635250.vsidx
 Source/CSharp-CommandLineArgumentsParser/.vs/CSharp-CommandLineArgumentsParser/FileContentIndex/d5abfeb7-e040-43f5-bb74-9b91f9466e55.vsidx
+Source/CSharp-CommandLineArgumentsParser/.vs/CSharp-CommandLineArgumentsParser/FileContentIndex/b6442ad4-2543-4c08-89ea-be6f34417bd5.vsidx
+Source/CSharp-CommandLineArgumentsParser/.vs/CSharp-CommandLineArgumentsParser/FileContentIndex/3bab0417-4aec-49b7-97db-52822cadf12d.vsidx
+Source/CSharp-CommandLineArgumentsParser/.vs/CSharp-CommandLineArgumentsParser/FileContentIndex/b6442ad4-2543-4c08-89ea-be6f34417bd5.vsidx
