--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,5 @@
 /Source/CSharp-CommandLineArgumentsParser/CSharp-CommandLineArgumentsParser/bin
 /Source/CSharp-CommandLineArgumentsParser/CSharp-CommandLineArgumentsParser/obj
-Source/CSharp-CommandLineArgumentsParser/.vs/CSharp-CommandLineArgumentsParser/DesignTimeBuild/.dtbcache.v2
-Source/CSharp-CommandLineArgumentsParser/.vs/CSharp-CommandLineArgumentsParser/FileContentIndex/eb59d688-4320-4ec1-8e7c-5c4ccdcaabba.vsidx
-Source/CSharp-CommandLineArgumentsParser/.vs/CSharp-CommandLineArgumentsParser/FileContentIndex/cc2ab6cb-5944-47c8-b0de-05ebc79593a9.vsidx
-Source/CSharp-CommandLineArgumentsParser/.vs/CSharp-CommandLineArgumentsParser/FileContentIndex/read.lock
-Source/CSharp-CommandLineArgumentsParser/.vs/CSharp-CommandLineArgumentsParser/v17/.futdcache.v2
-Source/CSharp-CommandLineArgumentsParser/.vs/CSharp-CommandLineArgumentsParser/v17/.suo
-Source/CSharp-CommandLineArgumentsParser/.vs/CSharp-CommandLineArgumentsParser/v17/TestStore/0/000.testlog
-Source/CSharp-CommandLineArgumentsParser/.vs/CSharp-CommandLineArgumentsParser/v17/TestStore/0/testlog.manifest
-Source/CSharp-CommandLineArgumentsParser/.vs/ProjectEvaluation/csharp-commandlineargumentsparser.metadata.v5.2
-Source/CSharp-CommandLineArgumentsParser/.vs/ProjectEvaluation/csharp-commandlineargumentsparser.projects.v5.2
-Source/CSharp-CommandLineArgumentsParser/.vs/CSharp-CommandLineArgumentsParser/FileContentIndex/9deab749-28e8-4492-a20d-0bafc91fc122.vsidx
-Source/CSharp-CommandLineArgumentsParser/.vs/CSharp-CommandLineArgumentsParser/FileContentIndex/93089229-b389-4811-a7db-d15840635250.vsidx
-Source/CSharp-CommandLineArgumentsParser/.vs/CSharp-CommandLineArgumentsParser/FileContentIndex/d5abfeb7-e040-43f5-bb74-9b91f9466e55.vsidx
-Source/CSharp-CommandLineArgumentsParser/.vs/CSharp-CommandLineArgumentsParser/FileContentIndex/b6442ad4-2543-4c08-89ea-be6f34417bd5.vsidx
-Source/CSharp-CommandLineArgumentsParser/.vs/CSharp-CommandLineArgumentsParser/FileContentIndex/3bab0417-4aec-49b7-97db-52822cadf12d.vsidx
-Source/CSharp-CommandLineArgumentsParser/.vs/CSharp-CommandLineArgumentsParser/FileContentIndex/b6442ad4-2543-4c08-89ea-be6f34417bd5.vsidx
+Source/CSharp-CommandLineArgumentsParser/.vs
+
+
