--- a/Source/CommandLineArgumentsParser/CommandLineArgumentsParser/CommandLineArgumentsParser.csproj
+++ b/Source/CommandLineArgumentsParser/CommandLineArgumentsParser/CommandLineArgumentsParser.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -7,12 +7,12 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <GeneratePackageOnBuild>False</GeneratePackageOnBuild>
-    <Title>CSharpCommandLineArgumentsParser</Title>
+    <Title>CommandLineArgumentsParser</Title>
     <Authors>CleverCodeCravers</Authors>
     <Description>Feature rich library to parse command line arguments in C# Applications</Description>
     <Copyright>MIT</Copyright>
     <PackageProjectUrl>https://github.com/CleverCodeCravers/CSharp-CommandLineArgumentsParser</PackageProjectUrl>
-    <Version>1.0.4</Version>
+    <Version>1.0.5</Version>
   </PropertyGroup>
 
 </Project>
