--- a/Source/CommandLineArgumentsParser/CommandLineArgumentsParser/CommandLineArgumentsParser.csproj
+++ b/Source/CommandLineArgumentsParser/CommandLineArgumentsParser/CommandLineArgumentsParser.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net7.0</TargetFramework>
 	<RepositoryUrl>https://github.com/CleverCodeCravers/CSharp-CommandLineArgumentsParser</RepositoryUrl>
     <RootNamespace>CommandLineArgumentsParser</RootNamespace>
+	<PackageIcon>Resources\command-line.png</PackageIcon>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <GeneratePackageOnBuild>False</GeneratePackageOnBuild>
@@ -12,7 +13,7 @@
     <Description>Feature rich library to parse command line arguments in C# Applications</Description>
     <Copyright>MIT</Copyright>
     <PackageProjectUrl>https://github.com/CleverCodeCravers/CSharp-CommandLineArgumentsParser</PackageProjectUrl>
-    <Version>1.0.5</Version>
+    <Version>1.0.6</Version>
   </PropertyGroup>
 
 </Project>
