--- a/Source/CommandLineArgumentsParser/CommandLineArgumentsParser/CommandLineArgumentsParser.nuspec
+++ b/Source/CommandLineArgumentsParser/CommandLineArgumentsParser/CommandLineArgumentsParser.nuspec
@@ -2,14 +2,17 @@
 <package >
   <metadata>
     <id>CommandLineArgumentsParser</id>
-    <version>1.0.5</version>
+    <version>1.0.6</version>
     <title>CommandLineArgumentsParser</title>
     <authors>CleverCodeCravers</authors>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <license type="expression">MIT</license>
-     <icon>Resources/command-line.png</icon> 
+    <icon>Resources\command-line.png</icon> 
     <projectUrl>https://github.com/CleverCodeCravers/CSharp-CommandLineArgumentsParser</projectUrl>
     <description>Feature rich library to parse command line arguments in C# Applications</description>
     <copyright>CleverCodeCravers</copyright>
   </metadata>
+	<files>
+		<file src="Resources\command-line.png" target="Resources\" />
+	</files>
 </package>
